--- a/kubernetes/roles/master/tasks/config.yaml
+++ b/kubernetes/roles/master/tasks/config.yaml
@@ -15,7 +15,9 @@
   become: true
   ansible.builtin.shell: |
     kubeadm init --pod-network-cidr={{ kubernetes.CIDR }} \
-      --apiserver-advertise-address {{ ansible_default_ipv4.address }} --control-plane-endpoint {{ control_plane_endpoint }}
+      --apiserver-advertise-address {{ ansible_default_ipv4.address }} 
+
+#--control-plane-endpoint {{ control_plane_endpoint }}
   register: init_result
   when:
     - not kube_admin_conf_check.stat.exists
@@ -38,16 +40,6 @@
 
 
 
-# Parse to extract the join command for control plane hosts 2 and 3
-- name: Extract kubeadm join command for worker nodes
-  ansible.builtin.shell: "/bin/egrep 'kubeadm join' /opt/kubeadm_init_output.log -A2|head -n3"
-  register: kubeadm_cp_join_output
-  changed_when: false
-  when:
-    - kube_admin_conf_check.stat.exists
-
-
-
 
 # After initializing the cluster on node 1 or joining on nodes 2 and 3, creates this file
 - name: Create marker file to indicate first node joined cluster
@@ -63,32 +55,8 @@
     - init_result.changed
 
 
-- name: Extract kubeadm join command for control planes
-  ansible.builtin.shell: "tail -n2 /opt/kubeadm_init_output.log"
-  register: kubeadm_nodes_join_output
-  changed_when: false
-  when:
-    - kube_admin_conf_check.stat.exists
 
-# Save the command as a fact
-- name: Set kubeadm cp join output as a fact
-  ansible.builtin.set_fact:
-    kubeadm_cp_join_output: "{{ kubeadm_cp_join_output.stdout }}"
-  when:
-    - kube_admin_conf_check.stat.exists
-  register: join_result
-
-- name: Set kubeadm nodes join output as a fact
-  ansible.builtin.set_fact:
-    kubeadm_node_join_output: "{{ kubeadm_nodes_join_output.stdout }}"
-  when:
-    - kube_admin_conf_check.stat.exists
-  register: join_result
-
-- name: Debug  nodes join command
-  debug:
-    var: hostvars[groups['masters'][0]]['kubeadm_cp_join_output'] 
-# After initializing the cluster on node 1 or joining on nodes 2 and 3, creates this file
+# After initializing the cluster on node 1, creates this file
 - name: Create marker file to indicate second and third nodes joined cluster
   become: true
   ansible.builtin.file:
